fix: Fixed something

--- a/landing.html
+++ b/landing.html
@@ -18,18 +18,20 @@
 
         <div class="hello">
             <img src="assets/avatar.jpg" alt="Avatar">
-            <h1>Hello!</h1>
+            <h1>Hi!</h1>
             <p>
-                I'm Roman <br> Welcome to my portfolio. <br> Choose one of my skills.
+                I'm Roman <br> Welcome to my portfolio website. <br>
             </p>
         </div>
 
         <div class="btns">
 
-            <a href="" onclick="" class="btn design-btn">Design / Art</a>
-            <a href="" onclick="" class="btn web-btn">Web Development</a>
+            <a href="design.html" onclick="" class="btn design-btn">Design / Art</a>
+            <a href="web-development.html" onclick="" class="btn web-btn">Web Development</a>
 
         </div>
     </section>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
