fix: Removed big photos

--- a/design.html
+++ b/design.html
@@ -35,15 +35,15 @@
         <div class="ps-work-container">
             
             <div class="image normal">
-                <a href="assets/colossus1.png" target="_blank"><img src="assets/colossus1.png" alt="" ></a>
+                <a href="assets/colossus1.jpg" target="_blank"><img src="assets/colossus1.jpg" alt="" ></a>
             </div>
 
             <div class="image normal">
-                <a href="assets/colossus2.png" target="_blank"><img src="assets/colossus2.png" alt=""></a>
+                <a href="assets/colossus2.jpg" target="_blank"><img src="assets/colossus2.jpg" alt=""></a>
             </div>
 
             <div class="image tall" >
-                <a href="assets/colossus3.png" target="_blank"><img src="assets/colossus3.png" alt=""></a>
+                <a href="assets/colossus3.jpg" target="_blank"><img src="assets/colossus3.jpg" alt=""></a>
             </div>
 
             <div class="image ultrawide">
@@ -51,7 +51,7 @@
             </div>
 
             <div class="image normal">
-                <a href="assets/ural.png" target="_blank"><img src="assets/ural.png" alt=""></a>
+                <a href="assets/ural.jpg" target="_blank"><img src="assets/ural.jpg" alt=""></a>
             </div>
 
             <div class="image big">
@@ -59,13 +59,12 @@
             </div>
 
             <div class="image wide">
-                <a href="assets/3D.png" target="_blank"><img src="assets/3D.png" alt=""></a>
+                <a href="assets/3D.jpg" target="_blank"><img src="assets/3D.jpg" alt=""></a>
             </div>
 
             <div class="image ultrawide">
-                <a href="assets/vefx.png" target="_blank"><img src="assets/vefx.png" alt=""></a>
+                <a href="assets/vefx.jpg" target="_blank"><img src="assets/vefx.jpg" alt=""></a>
             </div>
-
 
         </div>
 
