--- a/design.html
+++ b/design.html
@@ -75,7 +75,7 @@
     <section class="section footer">
         <div class="footer-wrapper">
             <p>Roman Liluashvili @2021</p>
-            <a href="landing.html"><img src="assets/avatar.jpg" alt=""></a>  
+            <a href="index.html"><img src="assets/avatar.jpg" alt=""></a>  
         </div>
     </section>
 
