--- a/design.html
+++ b/design.html
@@ -47,7 +47,7 @@
             <a href="assets/colossus2.jpg" class="image normal colo2">
             </a>
             
-            <a href="assets/3D.png" class="image wide">
+            <a href="assets/3D.jpg" class="image wide">
             </a>
             
             <a href="assets/vefx.jpg" class="image ultrawide vefx">
